--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+bloonix-heaven (0.5-1) unstable; urgency=low
+
+    * Fixed collection process size statistics. /proc/$pid/statm
+      is not available on other operation systems.
+    * Implemented include and wrapper for Heaven/Template.pm.
+    * Making the template cache persistent.
+    * Added argument cache_enabled to enable/disable the template
+      cache.
+    * Fixed undefined values warning in templates. Added // ''.
+    * Added line numbers to the template code.
+
+ -- Jonny Schulz <js@bloonix.de>  Mon, 08 Dec 2014 08:32:40 +0100
+
 bloonix-heaven (0.4-1) unstable; urgency=low
 
     * Updated the license information.
