--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+bloonix-heaven (0.6) released at 2014-12-11
+
+    * Regex for E-Mail addresses extended. The sign "=" is now allowed.
+
 bloonix-heaven (0.5) released at 2014-12-08
 
     * Fixed collection process size statistics. /proc/$pid/statm
