--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bloonix-heaven (0.8-1) unstable; urgency=low
+
+    * Now views are not processed if a redirect is active.
+
+ -- Jonny Schulz <js@bloonix.de>  Thu, 18 Dec 2014 17:28:12 +0100
+
 bloonix-heaven (0.7-1) unstable; urgency=low
 
     * New accessor text() added.
