--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 bloonix-heaven (0.10) released at 2015-04-14
 
-    * Bloonix::Validator can now return mandatory parameters.
+    * Bloonix::Validator can now return mandatory and optional parameters.
 
 bloonix-heaven (0.9) released at 2015-03-21
 
