--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bloonix-heaven (0.10-1) unstable; urgency=low
+
+    * Bloonix::Validator can now return mandatory and optional parameters.
+
+ -- Jonny Schulz <js@bloonix.de>  Wed, 15 Apr 2015 19:49:52 +0200
+
 bloonix-heaven (0.9-1) unstable; urgency=low
 
     * ProcManager and FCGI were splittet into 2 modules.
