--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bloonix-heaven (0.12-1) unstable; urgency=low
+
+    * Bloonix::Validator: added a postcheck method.
+
+ -- Jonny Schulz <js@bloonix.de>  Thu, 06 Aug 2015 21:48:18 +0200
+
 bloonix-heaven (0.11-1) unstable; urgency=low
 
     * Bloonix::Validator: new constraint param_value
