--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 bloonix-heaven (0.13) released at 2015-10-01
 
     * Added regexp to validate ipv4 and ipv6 addresses with network.
+    * Moved Bloonix::Validator to the core package and renamed it to
+      Bloonix::Validate.
 
 bloonix-heaven (0.12) released at 2015-08-06
 
