--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+bloonix-heaven (0.13-1) unstable; urgency=low
+
+    * Added regexp to validate ipv4 and ipv6 addresses with network.
+    * Moved Bloonix::Validator to the core package and renamed it to
+      Bloonix::Validate.
+
+ -- Jonny Schulz <js@bloonix.de>  Mon, 16 Nov 2015 13:16:19 +0100
+
  -- Jonny Schulz <js@bloonix.de>  Mon, 16 Nov 2015 13:14:28 +0100
 
 bloonix-heaven (0.12-1) unstable; urgency=low
