--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+bloonix-heaven (0.14) released at 2016-03-28
+
+    * Extra release because the gpg key of bloonix is updated.
+
 bloonix-heaven (0.13) released at 2015-11-15
 
     * Added regexp to validate ipv4 and ipv6 addresses with network.
